--- a/assets/styles/style.scss
+++ b/assets/styles/style.scss
@@ -963,7 +963,7 @@ body {
 }
 
 .actual_item_date {
-  font-family: "SF Pro Display", sans-serif;
+  font-family: "sf-pro-display_medium";
   font-size: 14px;
   font-weight: 600;
   line-height: 20px;
@@ -1058,7 +1058,7 @@ body {
 }
 
 .section_last ul li {
-  font-family: "SF Pro Display", sans-serif;
+  font-family: "sf-pro-display_medium";
   font-size: 16px;
   font-weight: 400;
   line-height: 24px;
@@ -1069,7 +1069,7 @@ body {
 }
 
 .section ul li {
-  font-family: "SF Pro Display", sans-serif;
+  font-family: "sf-pro-display_medium";
   font-size: 16px;
   font-weight: 400;
   line-height: 24px;
@@ -1088,7 +1088,7 @@ body {
   list-style-type: none;
   margin-right: 32px;
   margin-bottom: 16px;
-  font-family: "SF Pro Display", sans-serif;
+  font-family: "sf-pro-display_medium";
   font-size: 16px;
   font-weight: 600;
   line-height: 20px;
@@ -1128,7 +1128,7 @@ body {
 
 .footer_phone ul li,
 .footer_email ul li {
-  font-family: "SF Pro Display", sans-serif;
+  font-family: "sf-pro-display_medium";
   font-size: 14px;
   font-weight: 400;
   line-height: 24px;
@@ -1214,8 +1214,8 @@ body {
       padding-left: 0;
       li {
         list-style-type: none;
-        list-style-type: none;
-        font-family: "SF Pro Display", sans-serif;
+
+        font-family: "sf-pro-display_medium";
 
         font-size: 10px;
         font-weight: 400;
@@ -1246,7 +1246,7 @@ body {
     }
     ul li {
       list-style-type: none;
-      font-family: "SF Pro Display", sans-serif;
+      font-family: "sf-pro-display_medium";
 
       font-size: 10px;
       font-weight: 400;
@@ -1265,7 +1265,7 @@ body {
     }
     ul li {
       list-style-type: none;
-      font-family: "SF Pro Display", sans-serif;
+      font-family: "sf-pro-display_medium";
 
       font-size: 10px;
       font-weight: 400;
@@ -1290,7 +1290,7 @@ body {
       padding-left: 0;
       padding-right: 15px;
       li {
-        font-family: "SF Pro Display", sans-serif;
+        font-family: "sf-pro-display_medium";
         font-size: 10px;
         font-weight: 400;
         line-height: 15px;
@@ -1341,7 +1341,7 @@ body {
   }
 
   .nav-item a {
-    font-family: "SF Pro Display", sans-serif;
+    font-family: "sf-pro-display_medium";
     font-size: 16px;
     font-weight: 600;
     line-height: 20px;
@@ -2965,7 +2965,7 @@ body {
   gap: 10px;
   background-color: #4865d9;
 
-  font-family: "SF Pro Display", sans-serif;
+  font-family: "sf-pro-display_medium";
   font-size: 16px;
   font-weight: 600;
   line-height: 20px;
@@ -2988,7 +2988,7 @@ body {
 }
 
 .contacts_title {
-  font-family: "SF Pro Display", sans-serif;
+  font-family: "sf-pro-display_title";
   font-size: 40px;
   font-weight: 600;
   line-height: 40px;
@@ -3022,7 +3022,7 @@ body {
 .item1_text h5,
 .item2_text h5 {
   margin-bottom: 16px;
-  font-family: "SF Pro Display", sans-serif;
+  font-family: "sf-pro-display_title";
   font-size: 20px;
   font-weight: 600;
   line-height: 24px;
@@ -3032,7 +3032,7 @@ body {
 
 .item1_text p,
 .item2_text p {
-  font-family: "SF Pro Display", sans-serif;
+  font-family: "sf-pro-display_medium";
 
   font-size: 14px;
   font-weight: 400;
@@ -3047,24 +3047,30 @@ body {
 
 .phone {
   margin-right: 32px;
+  ul {
+    list-style-type: none;
+    padding-left: 0;
+  }
 }
 
 .phone li {
   margin-bottom: 12px;
-  font-family: "SF Pro Display", sans-serif;
+  font-family: "sf-pro-display_medium";
   font-size: 14px;
   font-weight: 400;
   line-height: 24px;
   letter-spacing: 0em;
   text-align: left;
+  color: #4865d9;
 }
 
 .email p {
   margin-bottom: 12px;
+  color: #4865d9;
 }
 
 .bills {
-  font-family: "SF Pro Display", sans-serif;
+  font-family: "sf-pro-display_medium";
   font-size: 16px;
   font-weight: 600;
   line-height: 20px;
@@ -3075,6 +3081,18 @@ body {
   margin-bottom: 62px;
 }
 
+.map_section {
+  margin: 0 auto;
+  border-radius: 32px;
+  img {
+    width: 430px;
+  }
+
+  /* height: 600px; */
+
+  /* background-image: url(/assets/map.png); */
+}
+
 .people {
   margin: auto;
   max-width: 1520px;
@@ -3082,7 +3100,7 @@ body {
 }
 
 .people h3 {
-  font-family: "SF Pro Display", sans-serif;
+  font-family: "sf-pro-display_title";
   font-size: 40px;
   font-weight: 600;
   line-height: 40px;
@@ -3093,6 +3111,7 @@ body {
 }
 
 .people_cards {
+  gap: 32px;
   display: grid;
   grid-template-columns: 356px 356px 356px 356px;
   grid-template-rows: auto;
@@ -3100,7 +3119,7 @@ body {
 }
 
 .people_card h5 {
-  font-family: "SF Pro Display", sans-serif;
+  font-family: "sf-pro-display_title";
   font-size: 24px;
   font-weight: 600;
   line-height: 32px;
@@ -3110,7 +3129,8 @@ body {
 }
 
 .people_card ul li {
-  font-family: "SF Pro Display", sans-serif;
+  list-style-type: none;
+  font-family: "sf-pro-display_medium";
   font-size: 16px;
   font-weight: 400;
   line-height: 24px;
@@ -3134,13 +3154,14 @@ body {
   margin-left: auto;
   margin-right: auto;
   margin-top: 56px;
-  background-color: #aeaeae;
-  font-family: "SF Pro Display", sans-serif;
+  background-color: #ecedf0;
+  font-family: "sf-pro-display_medium";
   font-size: 16px;
   font-weight: 600;
   line-height: 20px;
   letter-spacing: 0px;
   text-align: left;
+  border: none;
 }
 
 @media screen and (max-width: 1210px) {
@@ -3210,7 +3231,7 @@ body {
   }
 
   .nav-item a {
-    font-family: "SF Pro Display", sans-serif;
+    font-family: "sf-pro-display_medium";
     font-size: 16px;
     font-weight: 600;
     line-height: 20px;
@@ -3287,19 +3308,15 @@ body {
   .contacts_section {
     margin: 15px 15px 15px 15px;
   }
-  .map_section {
-    margin: 0 auto;
-    width: 80%;
-  }
 
   .people h3 {
     text-align: center;
   }
-  .people_cards {
+  /* .people_cards {
     display: flex;
     flex-direction: column;
     align-items: center;
-  }
+  } */
 
   .people_card {
     margin-bottom: 15px;
@@ -3322,6 +3339,23 @@ body {
 
   .footer_m_wrapper {
     max-width: none;
+  }
+}
+
+@media screen and (max-width: 1520px) {
+  .people_cards {
+    grid-template-columns: 356px 356px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .people_cards {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .people_card {
+    margin: 0 auto;
   }
 }
 // =============================== Контакты ==============================
