--- a/assets/styles/style.scss
+++ b/assets/styles/style.scss
@@ -452,7 +452,7 @@ body {
 .category_card {
   border-radius: 32px;
   background-color: #ecedf0;
-
+  min-height: 243px;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -533,6 +533,23 @@ body {
   width: 50%;
   height: 40px;
   padding: 10px 13px;
+}
+
+.details-btn_mobile {
+  font-family: "sf-pro-display_medium";
+
+  display: none;
+  background-color: #4865d9;
+  color: #fff;
+  text-align: center;
+  margin-top: 20px;
+  margin-right: 0;
+  margin-right: 53px;
+  margin-left: 53px;
+  padding: 14px 32px;
+  border-radius: 12px;
+
+  text-decoration: none;
 }
 
 .new_products span,
@@ -1418,11 +1435,17 @@ body {
 }
 
 .section {
-  column-gap: 20px;
+  column-gap: 15px;
   /* display: flex; */
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
   margin-right: 20px;
+  li {
+    a {
+      text-decoration: none;
+      color: #2c2d2e;
+    }
+  }
 }
 
 @media screen and (max-width: 1520px) {
@@ -1982,6 +2005,19 @@ body {
   .new {
     padding-left: 53px;
     padding-right: 53px;
+    .link {
+      display: none;
+    }
+
+    .look_all_mobile {
+      display: block;
+    }
+  }
+
+  .details-btn_mobile {
+    display: block;
+    margin-right: 0;
+    margin-left: 0;
   }
 
   .switcher {
