--- a/assets/styles/style.scss
+++ b/assets/styles/style.scss
@@ -1378,6 +1378,9 @@ body {
 
   .subscribe {
     padding-right: 25px;
+    img {
+      display: none;
+    }
   }
 
   .nav-item a {
@@ -2949,6 +2952,7 @@ body {
     margin-bottom: 32px;
   }
   p {
+    padding-right: 55px;
     max-width: 630px;
     color: #69696d;
     font-family: "sf-pro-display_medium";
@@ -3098,10 +3102,16 @@ body {
   line-height: 24px;
   letter-spacing: 0em;
   text-align: left;
+  padding-right: 15px;
 }
 
 .phones {
   display: flex;
+  .email {
+    h5 {
+      padding-right: 25px;
+    }
+  }
 }
 
 .phone {
@@ -3144,7 +3154,7 @@ body {
   margin: 0 auto;
   border-radius: 32px;
   img {
-    width: 430px;
+    width: 1520px;
   }
 
   /* height: 600px; */
@@ -3358,9 +3368,9 @@ body {
   /* .footer_contacts {
       flex-direction: column;
     } */
-  .content {
+  /* .content {
     margin-top: 0px;
-  }
+  } */
   .contacts_title {
     margin-left: 15px;
   }
@@ -3368,9 +3378,6 @@ body {
     margin: 15px 15px 15px 15px;
   }
 
-  .people h3 {
-    text-align: center;
-  }
   /* .people_cards {
     display: flex;
     flex-direction: column;
@@ -3402,19 +3409,76 @@ body {
 }
 
 @media screen and (max-width: 1520px) {
+  .map_section {
+    margin: 0 auto;
+    border-radius: 32px;
+    img {
+      width: 100%;
+    }
+
+    /* height: 600px; */
+
+    /* background-image: url(/assets/map.png); */
+  }
   .people_cards {
     grid-template-columns: 356px 356px;
   }
 }
 
 @media screen and (max-width: 768px) {
+  .contacts_title {
+    font-size: 24px;
+    margin-bottom: 20px;
+  }
+  .phones {
+    display: block;
+    .email,
+    .phone {
+      h5 {
+        font-size: 14px;
+      }
+    }
+  }
+  .people h3 {
+    font-size: 20px;
+  }
+
+  .people {
+    margin-bottom: 24px;
+  }
+
   .people_cards {
     display: flex;
     flex-direction: column;
   }
 
   .people_card {
+    padding-right: 15px;
     margin: 0 auto;
+    display: flex;
+    flex-direction: row;
+
+    img {
+      width: 128px;
+      height: 128px;
+      border-radius: 32px;
+    }
+    ul {
+      padding-left: 8px;
+      h5 {
+        margin-bottom: 8px;
+        font-size: 14px;
+        text-align: left;
+      }
+      li {
+        text-align: left;
+        font-size: 14px;
+        img {
+          width: 24px;
+          height: 24px;
+        }
+      }
+    }
   }
 }
 // =============================== Контакты ==============================
