--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -32,6 +32,34 @@ body {
   flex-grow: 1;
 }
 
+.IDEA {
+  max-width: 100%;
+  height: 88px;
+  background-color: #dbdeed;
+  padding-top: 32px;
+  padding-bottom: 32px;
+}
+.IDEA .IDEA_content {
+  display: flex;
+  max-width: 1520px;
+  justify-content: space-between;
+  margin: 0 auto;
+}
+.IDEA .IDEA_content div a {
+  margin-right: 32px;
+  font-family: "sf-pro-display_medium";
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 24px;
+  letter-spacing: 0em;
+  text-align: left;
+  color: #2c2d2e;
+}
+
+.politics a {
+  color: #4865d9 !important;
+}
+
 .header {
   background-color: #e6e7eb;
   min-width: -moz-max-content;
@@ -1200,7 +1228,7 @@ body {
   padding-top: 28px;
   padding-right: 53px;
   padding-left: 53px;
-  margin-bottom: 88px;
+  padding-bottom: 20px;
   background-color: rgb(232, 234, 244);
 }
 .footer_mobile .social_items_mobile img {
@@ -1522,8 +1550,23 @@ body {
   .header {
     display: none;
   }
-  .footer {
+  .IDEA {
     margin-bottom: 88px;
+    padding-left: 53px;
+    padding-top: 16px;
+    padding-bottom: 16px;
+    height: -moz-fit-content;
+    height: fit-content;
+  }
+  .IDEA .IDEA_content {
+    flex-direction: column;
+  }
+  .IDEA .IDEA_content div {
+    display: flex;
+    flex-direction: column;
+  }
+  .IDEA .IDEA_content div a {
+    font-size: 10px;
   }
   .footer_contacts {
     margin-top: 40px;
@@ -2912,6 +2955,7 @@ body {
   letter-spacing: 0px;
   text-align: left;
   margin-bottom: 32px;
+  margin-top: 24px;
 }
 
 .people_card ul li {
@@ -2922,6 +2966,7 @@ body {
   line-height: 24px;
   letter-spacing: 0em;
   text-align: left;
+  margin-bottom: 20px;
 }
 
 .people_card ul li img {
