--- a/assets/styles/style.scss
+++ b/assets/styles/style.scss
@@ -34,6 +34,41 @@ body {
   flex-grow: 1;
 }
 
+.IDEA {
+  max-width: 100%;
+  height: 88px;
+  background-color: #dbdeed;
+
+  padding-top: 32px;
+  padding-bottom: 32px;
+
+  .IDEA_content {
+    display: flex;
+    max-width: 1520px;
+    justify-content: space-between;
+    margin: 0 auto;
+
+    div {
+      a {
+        margin-right: 32px;
+        font-family: "sf-pro-display_medium";
+        font-size: 16px;
+        font-weight: 400;
+        line-height: 24px;
+        letter-spacing: 0em;
+        text-align: left;
+        color: #2c2d2e;
+      }
+    }
+  }
+}
+
+.politics {
+  a {
+    color: #4865d9 !important;
+  }
+}
+
 .header {
   background-color: #e6e7eb;
   min-width: max-content;
@@ -1231,7 +1266,8 @@ body {
   padding-top: 28px;
   padding-right: 53px;
   padding-left: 53px;
-  margin-bottom: 88px;
+  padding-bottom: 20px;
+
   background-color: rgba(232, 234, 244, 1);
   .social_items_mobile img {
     width: 24px;
@@ -1598,8 +1634,22 @@ body {
     display: none;
   }
 
-  .footer {
+  .IDEA {
     margin-bottom: 88px;
+    padding-left: 53px;
+    padding-top: 16px;
+    padding-bottom: 16px;
+    height: fit-content;
+    .IDEA_content {
+      flex-direction: column;
+      div {
+        display: flex;
+        flex-direction: column;
+        a {
+          font-size: 10px;
+        }
+      }
+    }
   }
 
   .footer_contacts {
@@ -3195,6 +3245,7 @@ body {
   letter-spacing: 0px;
   text-align: left;
   margin-bottom: 32px;
+  margin-top: 24px;
 }
 
 .people_card ul li {
@@ -3205,6 +3256,7 @@ body {
   line-height: 24px;
   letter-spacing: 0em;
   text-align: left;
+  margin-bottom: 20px;
 }
 
 .people_card ul li img {
