--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -312,8 +312,6 @@ body {
 /*------------------------------------ Слайдер ---------------------------------*/
 .content {
   max-width: 1520px;
-  /* margin-left: auto;
-  margin-right: auto; */
   margin: 0 auto;
   margin-top: 39px;
 }
@@ -402,8 +400,8 @@ body {
   /* border-radius: 32px; */
   min-height: 100%;
   aspect-ratio: 16/9;
-  -o-object-fit: cover;
-     object-fit: cover;
+  -o-object-fit: fill;
+     object-fit: fill;
 }
 
 .slider_btn {
@@ -1524,7 +1522,7 @@ body {
     margin-right: 0;
   }
   .header_container {
-    max-width: 992px;
+    max-width: 1300px;
   }
   .tiles_row_1,
   .tiles_row_2 {
@@ -1549,6 +1547,10 @@ body {
 @media screen and (max-width: 992px) {
   .content {
     max-width: 750px;
+  }
+  .header_search_container {
+    max-width: 992px;
+    justify-content: space-around;
   }
   .header {
     display: none;
@@ -2271,23 +2273,30 @@ body {
   font-weight: 600;
   line-height: 40px;
   letter-spacing: 0px;
-  text-align: center;
   color: #2c2d2e;
-  max-width: 1018px;
-  margin: 0 auto;
   margin-bottom: 32px;
 }
 
-.about_us_subtitle_below {
+.about_company_text {
   font-family: "sf-pro-display_medium";
   font-size: 16px;
-  font-weight: 600;
+  font-weight: 400;
   line-height: 24px;
-  letter-spacing: 0px;
-  text-align: center;
+  letter-spacing: 0em;
+  text-align: left;
   color: #69696d;
-  max-width: 945px;
-  margin: 0 auto;
+  max-width: 953px;
+}
+
+.about_company {
+  display: flex;
+  justify-content: space-between;
+  max-width: 1520px;
+  padding-left: 72px;
+  padding-top: 55px;
+  padding-bottom: 79px;
+  background-color: #ffffff;
+  border-radius: 40px;
 }
 
 .ab_us_advantages {
@@ -2518,6 +2527,13 @@ body {
   }
   .ZTD_content h6 {
     margin-top: 0;
+  }
+  .navbar_mobile {
+    display: block;
+  }
+  .header_search_container {
+    max-width: 1200px;
+    justify-content: space-around;
   }
 }
 @media screen and (max-width: 992px) {
@@ -3085,6 +3101,60 @@ body {
     margin-right: 0;
     margin-bottom: 8px;
   }
+  .catalog_dropdown-btn {
+    display: inline-block;
+    width: 40px;
+  }
+  .burger.selected {
+    left: 0;
+    transition: 0.5s;
+  }
+  .burger {
+    transition: 0.5s;
+    display: block;
+    z-index: 100;
+    left: -100%;
+    width: 100%;
+    background-color: #e6e7eb;
+    position: absolute;
+    top: 94px;
+  }
+  .header_container {
+    display: block;
+    padding-top: 16px;
+    padding-bottom: 16px;
+    padding-left: 25px;
+  }
+  .contacts {
+    position: static;
+    margin-left: 0;
+  }
+  .contacts_2,
+  .contacts_3 {
+    margin-left: 0;
+  }
+  .nav {
+    display: flex;
+    justify-content: initial;
+    align-items: initial;
+  }
+  .nav_icons {
+    display: none;
+  }
+  .catalog_btn {
+    display: none;
+  }
+  .catalog_dropdown-btn {
+    width: 40px;
+  }
+  .info,
+  .contacts {
+    display: block;
+  }
+  .info li,
+  .contacts li {
+    line-height: 4;
+  }
 }
 @media screen and (max-width: 1490px) {
   .search_input {
@@ -3478,4 +3548,113 @@ body {
   line-height: 20px;
   color: #69696d;
   text-align: left;
+}
+
+.parners_wrapper {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  width: 1520px;
+  gap: 97px;
+  margin-bottom: 75px;
+}
+
+.title-partners {
+  text-align: left;
+}
+
+.title_partner_card {
+  font-size: 32px;
+  font-weight: 600;
+  line-height: 40px;
+  letter-spacing: 0px;
+  text-align: left;
+}
+
+.partner_card {
+  position: relative;
+  height: 432px;
+  border-bottom: #69696d solid 1px;
+}
+.partner_card img {
+  margin-bottom: 24px;
+}
+.partner_card h3 {
+  margin-bottom: 24px;
+}
+.partner_card p {
+  font-family: "sf-pro-display_medium";
+  max-height: 150px;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 24px;
+  letter-spacing: 0em;
+  text-align: left;
+  color: #69696d;
+  overflow: scroll;
+}
+.partner_card a {
+  width: 200px;
+  position: absolute;
+  bottom: 5%;
+  padding: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+@media screen and (max-width: 1520px) {
+  .title-partners {
+    padding-left: 53px;
+  }
+  .parners_wrapper {
+    padding-left: 53px;
+    padding-right: 53px;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    width: 1300px;
+    gap: 97px;
+    margin-bottom: 75px;
+  }
+}
+@media screen and (max-width: 1300px) {
+  .title-partners {
+    padding-left: 53px;
+  }
+  .parners_wrapper {
+    padding-left: 53px;
+    padding-right: 53px;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    width: 1000px;
+    gap: 97px;
+    margin-bottom: 75px;
+  }
+}
+@media screen and (max-width: 992px) {
+  .title-partners {
+    padding-left: 53px;
+  }
+  .parners_wrapper {
+    padding-left: 53px;
+    padding-right: 53px;
+    display: grid;
+    grid-template-columns: 1fr;
+    width: 520px;
+    gap: 97px;
+    margin-bottom: 75px;
+  }
+}
+@media screen and (max-width: 768px) {
+  .title-partners {
+    padding-left: 53px;
+  }
+  .parners_wrapper {
+    padding-left: 53px;
+    padding-right: 53px;
+    display: grid;
+    grid-template-columns: 1fr;
+    width: 324px;
+    gap: 20px;
+    margin-bottom: 75px;
+  }
 }/*# sourceMappingURL=style.css.map */
