--- a/assets/styles/style.scss
+++ b/assets/styles/style.scss
@@ -322,8 +322,7 @@ body {
 /*------------------------------------ Слайдер ---------------------------------*/
 .content {
   max-width: 1520px;
-  /* margin-left: auto;
-  margin-right: auto; */
+
   margin: 0 auto;
   margin-top: 39px;
 }
@@ -416,7 +415,7 @@ body {
   /* border-radius: 32px; */
   min-height: 100%;
   aspect-ratio: 16/9;
-  object-fit: cover;
+  object-fit: fill;
 }
 
 .slider_btn {
@@ -1598,7 +1597,7 @@ body {
   }
 
   .header_container {
-    max-width: 992px;
+    max-width: 1300px;
   }
 
   .tiles_row_1,
@@ -1629,6 +1628,11 @@ body {
 @media screen and (max-width: 992px) {
   .content {
     max-width: 750px;
+  }
+
+  .header_search_container {
+    max-width: 992px;
+    justify-content: space-around;
   }
 
   .header {
@@ -2496,23 +2500,31 @@ body {
   font-weight: 600;
   line-height: 40px;
   letter-spacing: 0px;
-  text-align: center;
   color: #2c2d2e;
-  max-width: 1018px;
-  margin: 0 auto;
+
   margin-bottom: 32px;
 }
 
-.about_us_subtitle_below {
+.about_company_text {
   font-family: "sf-pro-display_medium";
   font-size: 16px;
-  font-weight: 600;
+  font-weight: 400;
   line-height: 24px;
-  letter-spacing: 0px;
-  text-align: center;
+  letter-spacing: 0em;
+  text-align: left;
   color: #69696d;
-  max-width: 945px;
-  margin: 0 auto;
+  max-width: 953px;
+}
+
+.about_company {
+  display: flex;
+  justify-content: space-between;
+  max-width: 1520px;
+  padding-left: 72px;
+  padding-top: 55px;
+  padding-bottom: 79px;
+  background-color: #ffffff;
+  border-radius: 40px;
 }
 
 // ================== Видео Секция ===============
@@ -2759,6 +2771,15 @@ body {
     h6 {
       margin-top: 0;
     }
+  }
+
+  .navbar_mobile {
+    display: block;
+  }
+
+  .header_search_container {
+    max-width: 1200px;
+    justify-content: space-around;
   }
 }
 
@@ -3057,9 +3078,6 @@ body {
 }
 
 @media screen and (max-width: 1520px) {
-}
-
-@media screen and (max-width: 1300px) {
 }
 
 @media screen and (max-width: 768px) {
@@ -3383,6 +3401,68 @@ body {
   .item1 {
     margin-right: 0;
     margin-bottom: 8px;
+  }
+
+  .catalog_dropdown-btn {
+    display: inline-block;
+    width: 40px;
+  }
+
+  .burger.selected {
+    left: 0;
+    transition: 0.5s;
+  }
+
+  .burger {
+    transition: 0.5s;
+    display: block;
+    z-index: 100;
+    left: -100%;
+    width: 100%;
+    background-color: #e6e7eb;
+    position: absolute;
+    top: 94px;
+  }
+
+  .header_container {
+    display: block;
+    padding-top: 16px;
+    padding-bottom: 16px;
+    padding-left: 25px;
+  }
+
+  .contacts {
+    position: static;
+    margin-left: 0;
+  }
+
+  .contacts_2,
+  .contacts_3 {
+    margin-left: 0;
+  }
+
+  .nav {
+    display: flex;
+    justify-content: initial;
+    align-items: initial;
+  }
+  .nav_icons {
+    display: none;
+  }
+
+  .catalog_btn {
+    display: none;
+  }
+
+  .catalog_dropdown-btn {
+    width: 40px;
+  }
+  .info,
+  .contacts {
+    display: block;
+    li {
+      line-height: 4;
+    }
   }
 }
 
@@ -3839,3 +3919,120 @@ body {
   }
 }
 // =============================== Блог Отдельный ==============================
+
+// =============================== Партнеры ==============================
+
+.parners_wrapper {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  width: 1520px;
+  gap: 97px;
+  margin-bottom: 75px;
+}
+
+.title-partners {
+  text-align: left;
+}
+
+.title_partner_card {
+  font-size: 32px;
+  font-weight: 600;
+  line-height: 40px;
+  letter-spacing: 0px;
+  text-align: left;
+}
+
+.partner_card {
+  position: relative;
+  height: 432px;
+  border-bottom: #69696d solid 1px;
+  img {
+    margin-bottom: 24px;
+  }
+  h3 {
+    margin-bottom: 24px;
+  }
+  p {
+    font-family: "sf-pro-display_medium";
+    max-height: 150px;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 24px;
+    letter-spacing: 0em;
+    text-align: left;
+    color: #69696d;
+    overflow: scroll;
+  }
+  a {
+    width: 200px;
+    position: absolute;
+    bottom: 5%;
+    padding: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+}
+
+@media screen and (max-width: 1520px) {
+  .title-partners {
+    padding-left: 53px;
+  }
+
+  .parners_wrapper {
+    padding-left: 53px;
+    padding-right: 53px;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    width: 1300px;
+    gap: 97px;
+    margin-bottom: 75px;
+  }
+}
+
+@media screen and (max-width: 1300px) {
+  .title-partners {
+    padding-left: 53px;
+  }
+  .parners_wrapper {
+    padding-left: 53px;
+    padding-right: 53px;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    width: 1000px;
+    gap: 97px;
+    margin-bottom: 75px;
+  }
+}
+
+@media screen and (max-width: 992px) {
+  .title-partners {
+    padding-left: 53px;
+  }
+  .parners_wrapper {
+    padding-left: 53px;
+    padding-right: 53px;
+    display: grid;
+    grid-template-columns: 1fr;
+    width: 520px;
+    gap: 97px;
+    margin-bottom: 75px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .title-partners {
+    padding-left: 53px;
+  }
+  .parners_wrapper {
+    padding-left: 53px;
+    padding-right: 53px;
+    display: grid;
+    grid-template-columns: 1fr;
+    width: 324px;
+    gap: 20px;
+    margin-bottom: 75px;
+  }
+}
+
+// =============================== Партнеры ==============================
