--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -3657,4 +3657,87 @@ body {
     gap: 20px;
     margin-bottom: 75px;
   }
+}
+.otk_wrapper {
+  margin-bottom: 122px;
+  display: flex;
+  width: 1520px;
+  padding: 24px 42px 24px 24px;
+  background-color: #ffffff;
+  border-radius: 32px;
+  justify-content: space-around;
+  align-items: center;
+}
+.otk_wrapper img {
+  margin-right: 20px;
+}
+
+.otk_text h1 {
+  margin-bottom: 32px;
+}
+.otk_text a {
+  padding: 14px 32px 14px 32px;
+  background-color: #f3f3f5;
+  border-radius: 12px;
+  text-decoration: none;
+  font-size: 16px;
+  font-weight: 600;
+  line-height: 20px;
+  letter-spacing: 0px;
+  text-align: left;
+  font-family: "sf-pro-display_title";
+  color: #2c2d2e;
+  display: inline-block;
+  margin-top: 48px;
+}
+
+.otk_text_section {
+  margin-bottom: 16px;
+  background-color: #f3f3f5;
+  border-radius: 24px;
+  padding: 20px 33px 20px 20px;
+  max-width: 814px;
+}
+.otk_text_section h5 {
+  margin-bottom: 12px;
+  font-size: 16px;
+  font-weight: 600;
+  line-height: 20px;
+  letter-spacing: 0px;
+  text-align: left;
+  font-family: "sf-pro-display_title";
+}
+.otk_text_section h5 img {
+  margin-right: 6px;
+}
+.otk_text_section p {
+  overflow: scroll;
+  font-family: "sf-pro-display_medium";
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 24px;
+  letter-spacing: 0em;
+  text-align: left;
+  color: #69696d;
+}
+
+@media screen and (max-width: 1520px) {
+  .otk_wrapper {
+    width: 1300px;
+  }
+}
+@media screen and (max-width: 1300px) {
+  .otk_wrapper {
+    width: 100%;
+    flex-direction: column;
+    padding: 24px 24px 24px 24px;
+  }
+  .otk_wrapper img {
+    margin: 0;
+  }
+}
+@media screen and (max-width: 768px) {
+  .otk_wrapper {
+    padding-top: 0;
+  }
 }/*# sourceMappingURL=style.css.map */
