--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -482,16 +482,17 @@ body {
 }
 
 .img_category_container {
-  padding: 10px;
+  padding: 2px;
+  max-width: 190px;
 }
 
 .category_card img {
-  aspect-ratio: 16/9;
+  aspect-ratio: 9/9;
   -o-object-fit: contain;
      object-fit: contain;
   width: 100%;
-  max-height: 100%;
-  margin-bottom: 25px;
+  /* max-height: 100%; */
+  /* margin-bottom: 25px; */
 }
 
 .category_card h6 {
@@ -607,11 +608,11 @@ body {
 }
 
 .img_sales_container {
-  padding: 10px;
+  padding: 1px;
 }
 
 .img_sales_container img {
-  aspect-ratio: 16/9;
+  aspect-ratio: 9/9;
   -o-object-fit: contain;
      object-fit: contain;
   width: 100%;
@@ -638,10 +639,9 @@ body {
   right: 0;
 }
 
-.img_sales_container {
+/* .img_sales_container {
   margin-top: 22px;
-}
-
+} */
 .price {
   font-size: 24px;
   font-weight: 600;
@@ -1620,6 +1620,13 @@ body {
     align-items: center;
     justify-content: center;
   }
+  .actual_items h2 {
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 21px;
+    letter-spacing: 0em;
+    text-align: left;
+  }
   .subscribe {
     flex-direction: column;
   }
@@ -1627,6 +1634,9 @@ body {
   .actual_item {
     width: 100%;
     margin-right: 0;
+  }
+  .actual .actual_title {
+    margin-bottom: 20px;
   }
   .subscribe_title {
     margin: 0;
@@ -1706,12 +1716,14 @@ body {
   }
   .tile_1 {
     background-repeat: no-repeat;
-    background-size: 110%;
+    background-size: 120%;
     /* background-position: -180px; */
+    overflow: hidden;
   }
   .tile_3 {
     background-repeat: no-repeat;
     background-size: 150%;
+    background-position: bottom 0 left 0;
   }
   .tile_2 {
     background-position: right 0;
@@ -1785,6 +1797,7 @@ body {
     margin-bottom: 0;
     font-size: 12px;
     font-weight: 400;
+    z-index: 3;
     letter-spacing: 0em;
     text-align: left;
     padding: 4px 8px;
@@ -1800,12 +1813,19 @@ body {
     border-radius: 0;
   }
   .about {
+    border-top-left-radius: 32px;
+    border-top-right-radius: 32px;
     width: 100%;
     padding: 0;
   }
   .about h1 {
     font-size: 20px;
     margin-bottom: 10px;
+  }
+  .about img {
+    margin-right: 0;
+    width: 100%;
+    border-bottom-right-radius: 0;
   }
   .about_title {
     padding-top: 20px;
@@ -1831,12 +1851,17 @@ body {
     margin-right: 0;
     border-radius: 0;
   }
-  .actual_item h2,
-  .actual_item h6 {
+  .advantage_title {
+    margin-bottom: 20px;
+  }
+  .actual_item h2 {
     margin-bottom: 12px;
     width: 324px;
     /* margin: 0 auto; */
     font-size: 20px;
+  }
+  .actual_item .actual_item_date {
+    font-size: 14px;
   }
   .subscribe {
     padding: 16px 53px;
@@ -2056,7 +2081,7 @@ body {
   }
   .tile_1 {
     background-position: -180px;
-    background-size: 200%;
+    background-size: 230%;
   }
   .tile_2 {
     background-position: right 0;
@@ -2568,6 +2593,11 @@ body {
   }
 }
 @media screen and (max-width: 768px) {
+  .announce_text .announce_title.title {
+    color: #fff;
+    font-family: "sf-pro-display_title";
+    font-size: 14px;
+  }
   .certs {
     padding-left: 23px;
     padding-right: 23px;
@@ -3244,7 +3274,7 @@ body {
 }
 @media screen and (max-width: 768px) {
   .category_card {
-    height: 121px;
+    min-height: 121px;
   }
   .contacts_title {
     font-size: 24px;
@@ -3670,6 +3700,9 @@ body {
 }
 .otk_wrapper img {
   margin-right: 20px;
+  -o-object-fit: cover;
+     object-fit: cover;
+  max-width: 600px;
 }
 
 .otk_text h1 {
